# Multimodal-Geo-Spatial-Learning

./: .gitignore  Output_28267347.err  Output_28267347.out  Output_28267412.err  Output_28267412.out  Output_28307669.err  Output_28307669.out  Output_28327178.out  README.md  pyproject.toml  submit.sh
.claude/: settings.json
configs/: crossview_baseline.yaml  crossview_convnext_base.yaml  crossview_convnext_base_384_zeroshot.yaml  crossview_convnext_base_v3.yaml  crossview_convnext_base_v4.yaml  geoclip_baseline.yaml  geoclip_new_train.yaml  geoclip_train.yaml  hybrid.yaml  sample4geo.yaml
eval_results/: eval_v2_20260512_234956.json  eval_v2_20260513_013950.json  eval_v2_20260514_001538.json  eval_v2_20260514_163044.json  eval_v2_20260514_182301.json  eval_v3_20260513_115428.json  eval_v3_20260514_003210.json  eval_v3_20260514_164248.json  eval_v3_20260514_211502.json  eval_v4_20260513_121927.json  eval_v4_20260514_003227.json  eval_v4_20260514_205300.json  eval_v4_20260515_015423.json  eval_zeroshot_20260513_115428.json  eval_zeroshot_20260513_232334.json  eval_zeroshot_20260514_135319.json  zeroshot_convnext_base_384_20260515_020110.json
logs/: crossview_base_28240624.err  crossview_base_28240624.out  crossview_base_28240741.out  crossview_base_28262514.err  crossview_base_28262514.out  crossview_eval_28291418.err  crossview_eval_28291418.out  crossview_eval_28429511.err  crossview_eval_28429511.out  crossview_eval_v2_28420410.err  crossview_eval_v2_28420410.out  crossview_eval_v2_28420718.err  crossview_eval_v2_28420718.out  crossview_eval_v2_28427082.err  crossview_eval_v2_28427082.out  crossview_eval_v2_28428881.err  crossview_eval_v2_28428881.out  crossview_eval_v2_28429512.err  crossview_eval_v2_28429512.out  crossview_eval_v3_28420411.err  crossview_eval_v3_28420411.out  crossview_eval_v3_28420719.err  crossview_eval_v3_28420719.out  crossview_eval_v3_28424584.err  crossview_eval_v3_28424584.out  crossview_eval_v3_28427083.err  crossview_eval_v3_28427083.out  crossview_eval_v3_28428882.err  crossview_eval_v3_28428882.out  crossview_eval_v3_28429513.err  crossview_eval_v3_28429513.out  crossview_eval_v4_28424586.err  crossview_eval_v4_28424586.out  crossview_eval_v4_28427084.err  crossview_eval_v4_28427084.out  crossview_eval_v4_28428883.err  crossview_eval_v4_28428883.out  crossview_eval_v4_28429514.err  (+54 more)
(+107 files in other folders)
