[project]
name = "mmgeo"
version = "0.1.0"
description = "Multimodal Geolocalization - DTU 02501 Advanced Deep Learning in Computer Vision"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geoclip>=1.2.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "numpy<2",
    "nvidia-cudnn-cu12>=9.1.0",
    "nvidia-nccl-cu12>=2.21.5",
    "pandas",
    "pillow>=12.2.0",
    "pyyaml>=6.0",
    "scipy>=1.17.1",
    "timm>=1.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "albumentations>=1.3.0",
    "scikit-learn>=1.2.1",
    "transformers>=4.27.0",
    "tqdm",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmgeo"]
